IataMessageProcessor/Parsers/Antlr/Ffa4/ffa4Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ffa4.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class ffa4Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, LineIdentifierSsr=3, LineIdentifierOsi=4, SeparatorSlant=5, 
		SeparatorHyphen=6, A=7, N=8, G=9, SeparatorCrlf=10;
	public const int
		RULE_ffa4 = 0, RULE_standardMessageIdentification = 1, RULE_consignmentDetail = 2, 
		RULE_flightDetails = 3, RULE_specialServiceRequest = 4, RULE_otherServiceInformation = 5, 
		RULE_bookingReference = 6, RULE_shipmentReferenceInformation = 7, RULE_flightInfoDetails = 8, 
		RULE_flightIdentification = 9, RULE_airportsOfDepartureAndArrival = 10, 
		RULE_awbIdentification = 11, RULE_awbOriginAndDestination = 12, RULE_quantityDetail = 13, 
		RULE_volumeDetail = 14, RULE_densityGroup = 15, RULE_totalConsignmentPieces = 16, 
		RULE_shrs = 17, RULE_specialHandlingRequirements = 18, RULE_ssrDetails1stLine = 19, 
		RULE_ssrDetails2stLine = 20, RULE_osiDetails1stLine = 21, RULE_osiDetails2stLine = 22, 
		RULE_natureOfGoods = 23, RULE_requestingOfficeMessageAddress = 24, RULE_rofr = 25, 
		RULE_requestingOfficeFileReference = 26, RULE_requestingParticipantIdentification = 27, 
		RULE_supplementary1or2 = 28, RULE_supplementaryShipmentInformation1 = 29, 
		RULE_supplementaryShipmentInformation2 = 30, RULE_standardMessageIdentifier = 31, 
		RULE_messageTypeVersionNumber = 32, RULE_lineIdentifier = 33, RULE_spaceAllocationCode = 34, 
		RULE_airlinePrefix = 35, RULE_awbSerialNumber = 36, RULE_airportCodeOfDeparture = 37, 
		RULE_airportCodeOfOrigin = 38, RULE_airportCodeOfDestitation = 39, RULE_airportCodeOfArrival = 40, 
		RULE_shipmentDescriptionCode = 41, RULE_volumeCode = 42, RULE_volumeAmount = 43, 
		RULE_densityIndicator = 44, RULE_densityGroupInner = 45, RULE_dayOfScheduledDeparture = 46, 
		RULE_monthOfScheduledDeparture = 47, RULE_flightNumber = 48, RULE_carrierCode = 49, 
		RULE_weightCode = 50, RULE_weight = 51, RULE_numberOfPieces = 52, RULE_specialHandlingCode = 53, 
		RULE_airportCityCode = 54, RULE_officeFunctionDesignator = 55, RULE_companyDesignator = 56, 
		RULE_participantIdentifier = 57, RULE_participantCode = 58, RULE_manifestDescriptionOfGoods = 59, 
		RULE_ssrDescription = 60, RULE_osiDescription = 61, RULE_referenceNumber = 62, 
		RULE_innerSupplementaryShipmentInformation = 63, RULE_fileReference = 64;
	public static readonly string[] ruleNames = {
		"ffa4", "standardMessageIdentification", "consignmentDetail", "flightDetails", 
		"specialServiceRequest", "otherServiceInformation", "bookingReference", 
		"shipmentReferenceInformation", "flightInfoDetails", "flightIdentification", 
		"airportsOfDepartureAndArrival", "awbIdentification", "awbOriginAndDestination", 
		"quantityDetail", "volumeDetail", "densityGroup", "totalConsignmentPieces", 
		"shrs", "specialHandlingRequirements", "ssrDetails1stLine", "ssrDetails2stLine", 
		"osiDetails1stLine", "osiDetails2stLine", "natureOfGoods", "requestingOfficeMessageAddress", 
		"rofr", "requestingOfficeFileReference", "requestingParticipantIdentification", 
		"supplementary1or2", "supplementaryShipmentInformation1", "supplementaryShipmentInformation2", 
		"standardMessageIdentifier", "messageTypeVersionNumber", "lineIdentifier", 
		"spaceAllocationCode", "airlinePrefix", "awbSerialNumber", "airportCodeOfDeparture", 
		"airportCodeOfOrigin", "airportCodeOfDestitation", "airportCodeOfArrival", 
		"shipmentDescriptionCode", "volumeCode", "volumeAmount", "densityIndicator", 
		"densityGroupInner", "dayOfScheduledDeparture", "monthOfScheduledDeparture", 
		"flightNumber", "carrierCode", "weightCode", "weight", "numberOfPieces", 
		"specialHandlingCode", "airportCityCode", "officeFunctionDesignator", 
		"companyDesignator", "participantIdentifier", "participantCode", "manifestDescriptionOfGoods", 
		"ssrDescription", "osiDescription", "referenceNumber", "innerSupplementaryShipmentInformation", 
		"fileReference"
	};

	private static readonly string[] _LiteralNames = {
		null, "'.'", "','", "'SSR/'", "'OSI/'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "LineIdentifierSsr", "LineIdentifierOsi", "SeparatorSlant", 
		"SeparatorHyphen", "A", "N", "G", "SeparatorCrlf"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ffa4.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ffa4Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ffa4Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ffa4Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Ffa4Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StandardMessageIdentificationContext standardMessageIdentification() {
			return GetRuleContext<StandardMessageIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConsignmentDetailContext consignmentDetail() {
			return GetRuleContext<ConsignmentDetailContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FlightDetailsContext flightDetails() {
			return GetRuleContext<FlightDetailsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BookingReferenceContext bookingReference() {
			return GetRuleContext<BookingReferenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SpecialServiceRequestContext specialServiceRequest() {
			return GetRuleContext<SpecialServiceRequestContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OtherServiceInformationContext otherServiceInformation() {
			return GetRuleContext<OtherServiceInformationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShipmentReferenceInformationContext shipmentReferenceInformation() {
			return GetRuleContext<ShipmentReferenceInformationContext>(0);
		}
		public Ffa4Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ffa4; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffa4Visitor<TResult> typedVisitor = visitor as Iffa4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFfa4(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Ffa4Context ffa4() {
		Ffa4Context _localctx = new Ffa4Context(Context, State);
		EnterRule(_localctx, 0, RULE_ffa4);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 130;
			standardMessageIdentification();
			State = 131;
			consignmentDetail();
			State = 132;
			flightDetails();
			State = 134;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LineIdentifierSsr) {
				{
				State = 133;
				specialServiceRequest();
				}
			}

			State = 137;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LineIdentifierOsi) {
				{
				State = 136;
				otherServiceInformation();
				}
			}

			State = 139;
			bookingReference();
			State = 141;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==A) {
				{
				State = 140;
				shipmentReferenceInformation();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StandardMessageIdentificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StandardMessageIdentifierContext standardMessageIdentifier() {
			return GetRuleContext<StandardMessageIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(ffa4Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MessageTypeVersionNumberContext messageTypeVersionNumber() {
			return GetRuleContext<MessageTypeVersionNumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(ffa4Parser.SeparatorCrlf, 0); }
		public StandardMessageIdentificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_standardMessageIdentification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffa4Visitor<TResult> typedVisitor = visitor as Iffa4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStandardMessageIdentification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StandardMessageIdentificationContext standardMessageIdentification() {
		StandardMessageIdentificationContext _localctx = new StandardMessageIdentificationContext(Context, State);
		EnterRule(_localctx, 2, RULE_standardMessageIdentification);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 143;
			standardMessageIdentifier();
			State = 144;
			Match(SeparatorSlant);
			State = 145;
			messageTypeVersionNumber();
			State = 146;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConsignmentDetailContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AwbIdentificationContext awbIdentification() {
			return GetRuleContext<AwbIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AwbOriginAndDestinationContext awbOriginAndDestination() {
			return GetRuleContext<AwbOriginAndDestinationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public QuantityDetailContext quantityDetail() {
			return GetRuleContext<QuantityDetailContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NatureOfGoodsContext natureOfGoods() {
			return GetRuleContext<NatureOfGoodsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(ffa4Parser.SeparatorCrlf, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VolumeDetailContext volumeDetail() {
			return GetRuleContext<VolumeDetailContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DensityGroupContext densityGroup() {
			return GetRuleContext<DensityGroupContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TotalConsignmentPiecesContext totalConsignmentPieces() {
			return GetRuleContext<TotalConsignmentPiecesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShrsContext shrs() {
			return GetRuleContext<ShrsContext>(0);
		}
		public ConsignmentDetailContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_consignmentDetail; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffa4Visitor<TResult> typedVisitor = visitor as Iffa4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConsignmentDetail(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConsignmentDetailContext consignmentDetail() {
		ConsignmentDetailContext _localctx = new ConsignmentDetailContext(Context, State);
		EnterRule(_localctx, 4, RULE_consignmentDetail);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 148;
			awbIdentification();
			State = 149;
			awbOriginAndDestination();
			State = 150;
			quantityDetail();
			State = 152;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 151;
				volumeDetail();
				}
				break;
			}
			State = 155;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 154;
				densityGroup();
				}
				break;
			}
			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==A) {
				{
				State = 157;
				totalConsignmentPieces();
				}
			}

			State = 160;
			natureOfGoods();
			State = 162;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 161;
				shrs();
				}
				break;
			}
			State = 164;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FlightDetailsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FlightInfoDetailsContext[] flightInfoDetails() {
			return GetRuleContexts<FlightInfoDetailsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FlightInfoDetailsContext flightInfoDetails(int i) {
			return GetRuleContext<FlightInfoDetailsContext>(i);
		}
		public FlightDetailsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_flightDetails; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffa4Visitor<TResult> typedVisitor = visitor as Iffa4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFlightDetails(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FlightDetailsContext flightDetails() {
		FlightDetailsContext _localctx = new FlightDetailsContext(Context, State);
		EnterRule(_localctx, 6, RULE_flightDetails);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 167;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 166;
					flightInfoDetails();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 169;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SpecialServiceRequestContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LineIdentifierSsr() { return GetToken(ffa4Parser.LineIdentifierSsr, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SsrDetails1stLineContext ssrDetails1stLine() {
			return GetRuleContext<SsrDetails1stLineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SsrDetails2stLineContext ssrDetails2stLine() {
			return GetRuleContext<SsrDetails2stLineContext>(0);
		}
		public SpecialServiceRequestContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_specialServiceRequest; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffa4Visitor<TResult> typedVisitor = visitor as Iffa4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSpecialServiceRequest(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SpecialServiceRequestContext specialServiceRequest() {
		SpecialServiceRequestContext _localctx = new SpecialServiceRequestContext(Context, State);
		EnterRule(_localctx, 8, RULE_specialServiceRequest);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 171;
			Match(LineIdentifierSsr);
			State = 172;
			ssrDetails1stLine();
			State = 174;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SeparatorSlant) {
				{
				State = 173;
				ssrDetails2stLine();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OtherServiceInformationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LineIdentifierOsi() { return GetToken(ffa4Parser.LineIdentifierOsi, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public OsiDetails1stLineContext osiDetails1stLine() {
			return GetRuleContext<OsiDetails1stLineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OsiDetails2stLineContext osiDetails2stLine() {
			return GetRuleContext<OsiDetails2stLineContext>(0);
		}
		public OtherServiceInformationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_otherServiceInformation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffa4Visitor<TResult> typedVisitor = visitor as Iffa4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOtherServiceInformation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OtherServiceInformationContext otherServiceInformation() {
		OtherServiceInformationContext _localctx = new OtherServiceInformationContext(Context, State);
		EnterRule(_localctx, 10, RULE_otherServiceInformation);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 176;
			Match(LineIdentifierOsi);
			State = 177;
			osiDetails1stLine();
			State = 179;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SeparatorSlant) {
				{
				State = 178;
				osiDetails2stLine();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BookingReferenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LineIdentifierContext lineIdentifier() {
			return GetRuleContext<LineIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(ffa4Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(ffa4Parser.SeparatorCrlf, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RequestingOfficeMessageAddressContext requestingOfficeMessageAddress() {
			return GetRuleContext<RequestingOfficeMessageAddressContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RofrContext rofr() {
			return GetRuleContext<RofrContext>(0);
		}
		public BookingReferenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bookingReference; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffa4Visitor<TResult> typedVisitor = visitor as Iffa4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBookingReference(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BookingReferenceContext bookingReference() {
		BookingReferenceContext _localctx = new BookingReferenceContext(Context, State);
		EnterRule(_localctx, 12, RULE_bookingReference);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 181;
			lineIdentifier();
			State = 182;
			Match(SeparatorSlant);
			State = 184;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==A) {
				{
				State = 183;
				requestingOfficeMessageAddress();
				}
			}

			State = 187;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SeparatorSlant) {
				{
				State = 186;
				rofr();
				}
			}

			State = 189;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShipmentReferenceInformationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LineIdentifierContext lineIdentifier() {
			return GetRuleContext<LineIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(ffa4Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(ffa4Parser.SeparatorCrlf, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ReferenceNumberContext referenceNumber() {
			return GetRuleContext<ReferenceNumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Supplementary1or2Context supplementary1or2() {
			return GetRuleContext<Supplementary1or2Context>(0);
		}
		public ShipmentReferenceInformationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shipmentReferenceInformation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iffa4Visitor<TResult> typedVisitor = visitor as Iffa4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShipmentReferenceInformation(this);
			else return visitor.VisitChildren(this);
		}
	}
